--- a/css/format.css
+++ b/css/format.css
@@ -2,7 +2,7 @@
 
 @font-face {
 	font-family: "Prompt";
-	src: url("/font/Prompt-Regular.ttf") format("truetype");
+	src: url("../font/Prompt-Regular.ttf") format("truetype");
 	font-weight: regular;
     font-style: normal;
 }
